--- a/Arc_Ai/Arc_Ai/vercel.json
+++ b/Arc_Ai/Arc_Ai/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "Arc_Ai/wsgi.py",
@@ -9,7 +10,7 @@
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles_build"
+        "distDir": "staticfiles"
       }
     }
   ],
